turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:4: error: not found: value setCouleurSol
    setCouleurSol(Color.WHITE)
    ^LangtonsAnt:9: error: not found: value setCouleurSol
    setCouleurSol(Color.BLACK)
    ^LangtonsAnt:15: error: not found: value LeveBrosse
  LeveBrosse()
  ^